<resources>
    <string name="app_name">Registration App</string>
    <string name="reg_form">Registration Form</string>
    <string name="reg_details">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="input"></string>
    <string name="reg">Register</string>
</resources>